--- a/Css/style.css
+++ b/Css/style.css
@@ -14,12 +14,12 @@
 
 
 body{
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	
 }
 
 .loginFrame{
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
 	
 }
@@ -47,10 +47,10 @@ img{
 }
 
 .logo{
-	max-width: 150px;
+	max-width: 120px;
+
 	border-radius: 50%;
-	box-shadow: 0px 2px 2px 0px  var(--cor-preta);
-	margin: 15px;
+	margin: 5px;
 }
 
 form{
@@ -81,6 +81,7 @@ input{
 	border-radius: 2px;
 	font-weight: bold;
 	text-transform: uppercase;
+	cursor: pointer;
 	
 }
 
@@ -116,12 +117,13 @@ a{
 /* Pagina Home */
 
 .header{
+	background-color: var(--cor-site);
+}
+.nav-main{
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	grid-template-columns: 1fr 2fr 1fr;
 	padding: 15px;
-	background-color: var(--cor-site);
 }
 .header div{
 	display: flex;
@@ -129,7 +131,7 @@ a{
 	
 }
 .nav-icons{
-	max-width: 40px;
+	width: 30px;
 	margin-right: 15px;
 
 }
@@ -144,6 +146,7 @@ a{
 	
 }
 
+
 .input-group {
 	display: flex;
 	align-items: center;
@@ -153,6 +156,7 @@ a{
 	padding: 5px;
 	max-width: 500px;
 	box-shadow: 2px 2px 4px #888888;
+	margin: 0 15px 0px 5px;
 	
 }
 
@@ -173,46 +177,85 @@ a{
 	font-family:monospace;
 	text-align: center;
 }
+.container-nav{
+	background-color:var(--cor-site) ;
+	display: grid;
+	grid-template-columns: 3fr 1fr;
+	justify-content: space-between;
+	background-color:var(--cor-site);
+	box-shadow: 0px 5px 5px -5px rgba(0, 0, 0, 0.5);
+	margin-bottom: 10px;
+	padding-left: 5px;
+	padding-right: 5px;	
+	
+	
+}
+
+.filter-nav a{
+	margin-right:13px ;
+	
+}
+.filter-nav a:hover{
+	text-decoration: underline;
+	font-weight: bold;
+	
+
+
+}
+
+
+.endereco img{
+	margin: 0px;
+	width: 15px;
+} 
+.endereco a{
+	padding-top: 7px;
+}
 
 .filter-container{
 	display: flex;
 	justify-content: space-around;
 	list-style: none;
-	margin:15px 20px 30px 20px ;
+	margin: 30px 0px 30px 0px ;
 }
+ 
 .filter-card{
 	padding: 10px;
 	border-radius: 50%;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-	background-color:var();
-}
+} 
 .filter-icons{
-	max-width:50px;
+	width:40px;
 
 }
-
+ 
 .product-list{
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
-	row-gap: 10px;
-	justify-content: center;
-	align-items: center;
+	display: grid; 
+	grid-template-columns: repeat(auto-fit, minmax(170px, 1fr)); 
+	row-gap: 20px; 
+	column-gap: 10px; 
+	justify-content: center; 
+	align-items: center;  
 
-}
+} 
 .card {
 	width: 170px;
 	margin: auto;
+	padding: auto;
 	border-radius: 15px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+	box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 
 }
+.card:hover{
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
   
 .card img {
 	display: block;
-	width: 100%;
+	width: 90%;
 	height: auto;
 	object-fit: cover;
 }
@@ -291,6 +334,7 @@ a{
 	margin: 0 auto;
 	padding: 15px;
 
+
   }
   
   .row {
@@ -304,25 +348,116 @@ a{
 	margin-bottom: 30px;
   }
   
+ /* stylo sign in   */
+
+.center{
+	margin: auto	;
+	display:flex;
+	justify-content: center;
+	align-items: center;
+	background-color: var(--cor-site); 
+	margin: auto;
+}
+
+.contaner-register{
+	border-radius: 5px;
+	margin: 10px auto;
+	display: grid;
+	grid-template-columns: 0.8fr 1fr ;
+	box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+	background-color: #fff;
+	height: 330px;
+	
+}
+.content-sucundary{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+
+	
+}
+
+.content-sucundary h1{
+	color: var(--cor-site);
+	text-shadow: 0px 3px 2px rgba(0, 0, 0, 0.1);
+}
+
+.content-sucundary p{
+	width: 80%;
+	font-size: 0.8rem;
+	font-family: Arial, Helvetica, sans-serif;
+	padding: 5px 10px 10px 10px;
+	margin-top: 10px;
+	color: #727271;
+}
+
+.main-content{ 
+
+	padding: 15px; 
+	background-color: #313131; 
+	border-radius: 0px 5px 5px 0px;
+
+}
+
+.main-content h1{
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 1.9rem;
+	color: var(--cor-site);
+}
+.main-content .loginFields input{
+	height: 25px;
+}
+
+input[type="text"]:focus {
+	border-color: var(--cor-site);
+}
+
+.main-content .loginFields div{
+	display: grid;
+	grid-template-columns: 2fr 1fr;
+}
+.main-content .loginFields .button{
+	margin: 20px  10px 5px 5px;
+}
+
+
 
 @media(min-width:600px){
 	.filter-container{
 		padding: 5px;
 		justify-content: center;
-
+		margin-top: 0px;
 	}
+	
 	.filter-card{
 		margin: 40px;
 	}
+
+	.container{
+		margin: 0px 0px 0px 50px;
+	}
+
+	.filter-nav a{
+		padding-top: 10px;
+		margin-right:50px ;
+		font-size: 0.75rem;
+		font-family: Arial, Helvetica, sans-seri;
+	}
+	
+	.endereco{
+		padding: 5px;
+	}
+
 	.product-list{
-		grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+		grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
 	}
 	.card{
 		width: 250px;
 	}
-	.container{
-		margin: 0px 0px 0px 50px;
-	}
+	
+	
 	
 }
 
