--- a/Css/style.css
+++ b/Css/style.css
@@ -5,7 +5,10 @@
 	--cor-branca:#fff;
 	--cor-site:#FFCE3C;
 	--cor-bordas:rgb(194, 187, 187);
+	--cor-fundo:#fafafa;
+	--cor-rodape:#f5f5f5;
 	--font-category:Arial, Helvetica, sans-serif
+
 }
 
 *{
@@ -14,8 +17,12 @@
 
 
 body{
+	height: 100vh;
 	width: 100%;
 	
+}
+.wallpaper{
+	 background-color: var(--cor-fundo); 
 }
 
 .loginFrame{
@@ -185,8 +192,8 @@ a{
 	background-color:var(--cor-site);
 	box-shadow: 0px 5px 5px -5px rgba(0, 0, 0, 0.5);
 	margin-bottom: 10px;
-	padding-left: 5px;
-	padding-right: 5px;	
+	padding-left: 8px;
+	padding-right: 8px;	
 	
 	
 }
@@ -223,6 +230,7 @@ a{
 	padding: 10px;
 	border-radius: 50%;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+	background-color: var(--cor-branca);
 } 
 .filter-icons{
 	width:40px;
@@ -247,6 +255,7 @@ a{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	background-color: var(--cor-branca);
 
 }
 .card:hover{
@@ -265,6 +274,11 @@ a{
 	font-weight: bold;
 	margin-top: 10px;
 	font-size: 1rem;
+}
+.price{
+	font-family: Arial, Helvetica, sans-serif;
+	margin-top: 15px;
+
 }
 
 .card .price {
@@ -422,6 +436,108 @@ input[type="text"]:focus {
 	margin: 20px  10px 5px 5px;
 }
 
+.root{
+	display:grid;
+	grid-template-columns: repeat(auto-fit,minmax(400px,1fr));
+	column-gap: 5px;
+	margin-bottom:50px; 
+}	
+.product-card{
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
+	box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+	margin: 10px;
+	padding: 10px;
+	background-color: var(--cor-branca);
+	border-radius: 5px;
+}
+.basic-Product-information{
+	font-size: 1.5rem;
+	font-family: Arial, Helvetica, sans-serif;
+	padding: 5px;
+}
+.assessment img{
+	width: 15px;
+}
+.more-information{
+	font-size: 1rem;
+
+}
+.title{
+	font-size: 2rem;
+	font-family: Arial, Helvetica, sans-serif;
+	margin: 20px;
+	margin-left: 40px;
+}
+.payment-card{
+	background-color: var(--cor-branca);
+	box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+	margin: 10px;
+	padding: 10px;
+	border-radius: 5px;
+}
+
+.payment-methods{
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 0.8rem;
+	margin-bottom: 20px;
+	display: flex;
+	flex-direction: column;
+	align-items: start;
+
+}
+
+.payment-methods p{
+	display: flex;
+	align-items: center;
+	
+}
+.payment-methods p img{
+	width: 20px;
+	padding: 5px;
+}
+
+.freight{
+	border: 1px solid var(--cor-bordas);
+	border-radius: 3px;
+	padding: 5px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	font-family: Arial, Helvetica, sans-serif;
+	margin-bottom:100px ;
+
+}
+.freight h2{
+	width: 50%;
+	font-size: 1.1rem;
+	border-bottom:1px solid var(--cor-bordas) ;
+}
+.freight p{
+	padding: 5px;
+}
+
+.freight-category{
+	display: flex;
+	align-items: center;
+
+	
+}
+#button-finaly{
+	display: flex;
+	width: 90%;
+	height: 50px;
+	margin: auto;
+	justify-content: center;
+	align-items: center ;
+	border-radius: 10px;
+	font-size: 1.2rem;
+	
+}
+
+
+
+
 
 
 @media(min-width:600px){
@@ -456,6 +572,11 @@ input[type="text"]:focus {
 	.card{
 		width: 250px;
 	}
+	.root{
+	grid-template-columns:3fr 1fr;
+		
+	}
+	
 	
 	
 	
