--- a/Css/style.css
+++ b/Css/style.css
@@ -451,16 +451,26 @@ input[type="text"]:focus {
 	background-color: var(--cor-branca);
 	border-radius: 5px;
 }
+.product-preview{
+	display: flex;
+	justify-content: center;
+	padding: 20px;
+
+}
 .basic-Product-information{
 	font-size: 1.5rem;
 	font-family: Arial, Helvetica, sans-serif;
-	padding: 5px;
+	margin-bottom:10px ;
 }
 .assessment img{
 	width: 15px;
+	margin-bottom: 5px;
+	
 }
 .more-information{
-	font-size: 1rem;
+	font-size: 0.9rem;
+	font-family: Arial, Helvetica, sans-serif;
+	
 
 }
 .title{
@@ -492,9 +502,10 @@ input[type="text"]:focus {
 	align-items: center;
 	
 }
-.payment-methods p img{
+.icons{
 	width: 20px;
 	padding: 5px;
+
 }
 
 .freight{
@@ -505,7 +516,7 @@ input[type="text"]:focus {
 	flex-direction: column;
 	align-items: center;
 	font-family: Arial, Helvetica, sans-serif;
-	margin-bottom:100px ;
+	margin-bottom:30px ;
 
 }
 .freight h2{
@@ -521,6 +532,26 @@ input[type="text"]:focus {
 	display: flex;
 	align-items: center;
 
+	
+}
+
+.amount{
+	display: flex;
+	padding: 5px;
+	margin-bottom: 50px;
+
+}
+.amount #amount-box{
+	width: 30px;
+	height: 30px;
+	border: 1px solid var(--cor-bordas);
+}
+#amount-box{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 1.2rem;
+	font-family: Arial, Helvetica, sans-serif;
 	
 }
 #button-finaly{
