--- a/Css/style.css
+++ b/Css/style.css
@@ -375,7 +375,7 @@ a{
 
 .contaner-register{
 	border-radius: 5px;
-	margin: 10px auto;
+	margin: 10px;
 	display: grid;
 	grid-template-columns: 0.8fr 1fr ;
 	box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
@@ -438,25 +438,30 @@ input[type="text"]:focus {
 
 .root{
 	display:grid;
-	grid-template-columns: repeat(auto-fit,minmax(400px,1fr));
+	grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
 	column-gap: 5px;
-	margin-bottom:50px; 
+	margin-bottom:50px;
+	
 }	
 .product-card{
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
+	grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
 	box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
-	margin: 10px;
 	padding: 10px;
 	background-color: var(--cor-branca);
 	border-radius: 5px;
+	margin: 0px 10px 10px 10px;
+	
 }
+
 .product-preview{
 	display: flex;
 	justify-content: center;
-	padding: 20px;
+	margin-right: 10px;
 
 }
+
+
 .basic-Product-information{
 	font-size: 1.5rem;
 	font-family: Arial, Helvetica, sans-serif;
@@ -472,6 +477,8 @@ input[type="text"]:focus {
 	font-family: Arial, Helvetica, sans-serif;
 	
 
+	
+
 }
 .title{
 	font-size: 2rem;
@@ -482,7 +489,7 @@ input[type="text"]:focus {
 .payment-card{
 	background-color: var(--cor-branca);
 	box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
-	margin: 10px;
+	margin: 0px 10px 0px 10px;
 	padding: 10px;
 	border-radius: 5px;
 }
